# AISolution

./: README.md  pyproject.toml
app/: app.py  config.py
app/services/: openai_client.py  rag.py  search_client.py
config/: settings.py
models/: chat.py
public/: index.html
static/css/: site.css
static/js/: chat.js
templates/: index.html
